crates/test-ui/ui/msg_send_id_no_return_type.stderr
error[E0283]: type annotations needed
 --> ui/msg_send_id_no_return_type.rs
  |
  |     unsafe { msg_send_id![NSObject::class(), new] };
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: cannot satisfy `_: MaybeUnwrap`
  = help: the following types implement trait `MaybeUnwrap`:
            Id<T>
            Allocated<T>
            Option<Id<T>>
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
